--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "@quintenkasteel/useresize",
-  "version": "0.0.4",
+  "name": "@quintenkasteel/package-template",
+  "version": "0.0.1",
   "main": "./lib/index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js",
-    "build": "node scripts/build.js",
-    "lib": "babel src --out-dir lib --copy-files",
-    "test": "node scripts/test.js --env=jsdom"
+    "start": "webpack serve --config ./webpack.config.js",
+    "lib": "babel src --out-dir lib --copy-files"
   },
   "peerDependencies": {
-    "react": "^16.8.6"
+    "react": "^17.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -17,20 +15,20 @@
     "@babel/plugin-transform-regenerator": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@webpack-cli/serve": "^1.0.1",
     "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^9.0.0",
+    "babel-preset-react-app": "^10.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^8.2.0",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^3.2.0",
-    "react": "16.x.x",
-    "react-dom": "16.x.x",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.0",
-    "styled-components": "^5.2.0"
+    "html-webpack-plugin": "^4.5.0",
+    "react": "17.x.x",
+    "react-dom": "17.x.x",
+    "styled-components": "^5.2.1",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.3.0"
   },
   "description": "A simple to use library that provides useSwipe hook for React that enables swipe gestures for touch screens.",
   "directories": {
@@ -38,7 +36,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/quintenkasteel/useresize.git"
+    "url": "git+${githubUrl}.git"
   },
   "keywords": [
     "useResize",
@@ -46,9 +44,9 @@
     "React"
   ],
   "author": "Quinten Kasteel",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/quintenkasteel/useresize/issues"
+    "url": "https://${githubUrl}/issues"
   },
-  "homepage": "https://github.com/quintenkasteel/useresize#readme"
+  "homepage": "https://${githubUrl}#readme"
 }
