--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "./lib/index.js",
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js",
-    "lib": "babel src --out-dir lib --copy-files"
+    "lib": "babel src --out-dir lib --copy-files",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "npm run test -- --watch"
   },
   "peerDependencies": {
     "react": "^17.0.1"
@@ -15,17 +17,38 @@
     "@babel/plugin-transform-regenerator": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "@webpack-cli/serve": "^1.0.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^10.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.1",
+    "prettier": "^2.1.2",
     "react": "17.x.x",
     "react-dom": "17.x.x",
     "styled-components": "^5.2.1",
+    "typescript": "^4.0.5",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.3.0"
