--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js",
+    "build": "webpack --config ./webpack.config.js",
     "lib": "babel src --out-dir lib --copy-files",
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch"
