--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js",
-    "build": "webpack --config ./webpack.config.js",
+    "build": "tsc --p ./tsconfig.json",
     "lib": "babel src --out-dir lib --copy-files",
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch"
@@ -49,6 +49,7 @@
     "react": "17.x.x",
     "react-dom": "17.x.x",
     "styled-components": "^5.2.1",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.5",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
