--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "removeComments": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "target": "es5"
-  }
+    "target": "es6",
+    "importHelpers": true
+  },
+  "exclude": ["demo"]
 }
