--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,27 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
-
-# trigger build when pushing, or when creating a pull request
+name: CI
 on: [push, pull_request]
-
 jobs:
   build:
-
-    # run build on latest ubuntu
+    name: Test
     runs-on: ubuntu-latest
-
-    strategy:
+     strategy:
       matrix:
         # Run build for both Node version 12 and version 14
         node-version: [10.x, 12.x, 14.x]
-
     steps:
-    # for checking out the branch (https://github.com/actions/checkout#Push-a-commit-using-the-built-in-token)
-    - uses: actions/checkout@v2
-    # installing Node
-    - name: Use Node.js ${{ matrix.node-version }}
+      - uses: actions/checkout@v2
+       - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         # this is regarding the matrix strategy specified above
         node-version: ${{ matrix.node-version }}
-    # install dependencies
-    - run: npm ci
-    # build the project if necessary
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install # will run `yarn install` command
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: build # will run `yarn build` command
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: test # will run `yarn test` command
