--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,17 @@ jobs:
   build:
     name: Test
     runs-on: ubuntu-latest
-     strategy:
-      matrix:
-        # Run build for both Node version 12 and version 14
-        node-version: [10.x, 12.x, 14.x]
+    strategy:
+    matrix:
+      # Run build for both Node version 12 and version 14
+      node-version: [10.x, 12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
-       - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        # this is regarding the matrix strategy specified above
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+      - uses: actions/setup-node@v1
+        with:
+          # this is regarding the matrix strategy specified above
+          node-version: ${{ matrix.node-version }}
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: install # will run `yarn install` command
