--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,8 @@ jobs:
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: run coverage # will run `yarn run coverage` command
+      
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
