--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,6 @@ jobs:
           cmd: run coverage # will run `yarn run coverage` command
       
       - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@v1.1.2
+        uses: coverallsapp/github-action@master
         with: 
           github-token: ${{ secrets.GITHUB_TOKEN }}
