--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js",
     "build": "tsc --p ./tsconfig.json",
-    "test": "jest --config ./jest.config.json",
+    "test": "NODE_ENV=test jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch",
     "coverage": "jest --coverage"
   },
